implement all parsing except the session options

--- a/expect-doctest.cabal
+++ b/expect-doctest.cabal
@@ -33,6 +33,8 @@ library
                       python-wrapper,
                       text,
                       megaparsec,
+                      mtl,
+
 
 executable expect-doctest
     import:           commonstuff
