--- a/expect-doctest.cabal
+++ b/expect-doctest.cabal
@@ -27,31 +27,30 @@ library
     import:           commonstuff
     exposed-modules:  Pexpect
                       Parse
-    -- other-modules:
+                      ExpectTest
     hs-source-dirs:   lib
     build-depends:    base ^>=4.19.0.0,
                       python-wrapper,
                       text,
                       megaparsec,
                       mtl,
-
+                      directory,
+                      process,
 
 executable expect-doctest
     import:           commonstuff
     main-is:          Main.hs
-    -- other-modules:
     build-depends:    expect-doctest
     hs-source-dirs:   app
     build-depends:    base ^>=4.19.0.0,
-                      python-wrapper,
                       text,
 
 test-suite expect-doctest-test
     import:           commonstuff
-    -- Modules included in this executable, other than Main.
-    other-modules:    PexpectTest
-                      ParseTest
-                      TestUtils
+    other-modules:    TestPexpect
+                      TestParse
+                      Utils
+                      TestExpectTest
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
     main-is:          Main.hs
