test documents with current directory set to the directory the document is in

--- a/expect-doctest.cabal
+++ b/expect-doctest.cabal
@@ -36,6 +36,7 @@ library
                       mtl,
                       directory,
                       process,
+                      filepath,
 
 executable expect-doctest
     import:           commonstuff
