show initial text, implement no initial text option, fix a insignificant whitespace bug

--- a/expect-doctest.cabal
+++ b/expect-doctest.cabal
@@ -33,6 +33,7 @@ library
                       python-wrapper,
                       text,
                       megaparsec,
+                      parser-combinators,
                       mtl,
                       directory,
                       process,
