--- a/silverbane.cabal
+++ b/silverbane.cabal
@@ -1,5 +1,5 @@
 cabal-version:      3.0
-name:               expect-doctest
+name:               silverbane
 version:            0.1
 
 synopsis:           test documentation containing interactive command line transcripts
@@ -45,15 +45,15 @@ library
                       deepseq,
                       async,
 
-executable expect-doctest
+executable silverbane
     import:           commonstuff
     main-is:          Main.hs
-    build-depends:    expect-doctest
+    build-depends:    silverbane
     hs-source-dirs:   app
     build-depends:    base ^>=4.19.0.0,
                       text,
 
-test-suite expect-doctest-test
+test-suite silverbane-test
     import:           commonstuff
     other-modules:    TestPexpect
                       TestParse
@@ -63,7 +63,7 @@ test-suite expect-doctest-test
     hs-source-dirs:   test
     main-is:          Main.hs
     build-depends:    base ^>=4.19.0.0,
-                      expect-doctest,
+                      silverbane,
                       raw-strings-qq,
                       hspec,
                       mtl,
