--- a/silverbane.cabal
+++ b/silverbane.cabal
@@ -31,6 +31,7 @@ library
                       RegexReplace
                       ProcessUtils
                       DiffLibWrap
+                      RunActions
     hs-source-dirs:   lib
     build-depends:    base ^>=4.19.0.0,
                       python-wrapper,
