apply filters to doc text as well, fix error message line for continue with session parse error, fix filters to use multiline regex option

--- a/silverbane.cabal
+++ b/silverbane.cabal
@@ -46,6 +46,7 @@ library
                       filepath,
                       safe-exceptions,
                       pcre-utils,
+                      regex-pcre-builtin,
                       deepseq,
                       async,
                       --text-icu,
