update README, add simple Makefile

--- a/silverbane.cabal
+++ b/silverbane.cabal
@@ -35,7 +35,7 @@ library
                       Assertion
                       Silverbane
     hs-source-dirs:   lib
-    build-depends:    base ^>=4.19.0.0,
+    build-depends:    base >=4.17.0.0 && < 5,
                       python-wrapper,
                       text,
                       megaparsec,
@@ -56,7 +56,7 @@ executable silverbane
     main-is:          Main.hs
     build-depends:    silverbane
     hs-source-dirs:   app
-    build-depends:    base ^>=4.19.0.0,
+    build-depends:    base >=4.17.0.0 && < 5,
                       text,
 
 test-suite silverbane-test
@@ -68,7 +68,7 @@ test-suite silverbane-test
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
     main-is:          Main.hs
-    build-depends:    base ^>=4.19.0.0,
+    build-depends:    base >=4.17.0.0 && < 5,
                       silverbane,
                       raw-strings-qq,
                       hspec,
